--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="form-group ">
 				<input class="form-control" REQUIRED type="text" name="user" placeholder="nombre"> <br>
 				<input class="form-control" REQUIRED type="password" name="pass" placeholder="password"> <br>
-				<input class='btn btn-secondary' type="button" value=" Ingresar" id='ok'>
+				<input class='btn btn-secondary' type="button" value=" Ingresar" id='oks'>
 			</div>
 
 	</div>
